[tool.poetry]
name = "repl_python3_InfinityLink"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
selenium = "^3.141.0"
Flask = "^2.0.2"
django-buttons = "^0.9.2"
"dislash.py" = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
